# jinja2_workarounds

./: LICENSE  README.md  pyproject.toml
jinja2_better_includes/: __init__.py
jinja2_workarounds/: __init__.py
tests/: test_PreProessor.py  test_preprocessor.py  test_regex_pattern.py
tests/templates/: 001.j2  002.j2  003.j2  bad-leadin.j2  no-whitespace.j2  simple-indent.j2  tabbed-leadin.j2
